--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,4 +4,10 @@ include ':react-native-bootsplash'
 project(':react-native-bootsplash').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bootsplash/android')
 include ':react-native-navbar-color'
 project(':react-native-navbar-color').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navbar-color/android')
+include ':react-native-camera'
+project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../node_modules/react-native-camera/android')
+
+
+
+
 include ':app'
